tests/baselines/reference/privateNamesNoAccessibilityModifiers.errors.txt
tests/cases/conformance/classes/members/privateNames/privateNamesNoAccessibilityModifiers.ts(2,12): error TS18004: Accessibility modifiers cannot be used with private names.
tests/cases/conformance/classes/members/privateNames/privateNamesNoAccessibilityModifiers.ts(3,13): error TS18004: Accessibility modifiers cannot be used with private names.
tests/cases/conformance/classes/members/privateNames/privateNamesNoAccessibilityModifiers.ts(4,15): error TS18004: Accessibility modifiers cannot be used with private names.


==== tests/cases/conformance/classes/members/privateNames/privateNamesNoAccessibilityModifiers.ts (3 errors) ====
    class A {
        public #foo;         // Error
               ~~~~
!!! error TS18004: Accessibility modifiers cannot be used with private names.
        private #bar;        // Error
                ~~~~
!!! error TS18004: Accessibility modifiers cannot be used with private names.
        protected #baz;      // Error
                  ~~~~
!!! error TS18004: Accessibility modifiers cannot be used with private names.
        readonly #qux;       // OK
    }
    